--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -145,13 +145,15 @@
     }
 
     .navbar-container {
-        position: absolute;
+        position: fixed; 
         background-color: #362b27;
-        left: 100%;
-        width: 100%;
+        top: 0;
+        left: 0; 
+        width: 100%; 
         height: 100vh;
         padding-top: 5%;
-        transition: left 0.3s ease;
+        transition: transform 0.3s ease; 
+        transform: translateX(100%); 
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -159,7 +161,7 @@
     }
 
     .navbar-container.show {
-        left: 0;
+        transform: translateX(0);
     }
     .navbar-menu {
         flex-direction: column;
