--- a/src/Schedule.css
+++ b/src/Schedule.css
@@ -8,7 +8,8 @@
 
 .schedule-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 5%;
     padding: 0 100px 90px 100px;
 }
 
